update haystack rag examples, working examples with haystack agent

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ bs4
 ipywidgets
 chromadb
 rouge
-farm-haystack[metrics,preprocessing,elasticsearch,inference]
+farm-haystack[metrics,preprocessing,elasticsearch,inference,faiss]
 pypdf
 einops
