--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,237 @@
-transformers[agents]
-torch
-langchain
-faiss-cpu
-sentence-transformers
-InstructorEmbedding
-unstructured
-huggingface_hub
-bs4
-ipywidgets
-chromadb
-rouge
-farm-haystack[metrics,preprocessing,elasticsearch,inference,faiss,ocr,file-conversion,pdf]
-pypdf
-einops
-bitsandbytes
-accelerate
+# transformers[agents]
+# torch
+# langchain
+# faiss-cpu
+# sentence-transformers
+# InstructorEmbedding
+# unstructured
+# huggingface_hub
+# bs4
+# ipywidgets
+# chromadb
+# # rouge
+# farm-haystack[metrics,preprocessing,elasticsearch,inference,faiss,ocr,file-conversion,pdf]
+# pypdf
+accelerate==0.22.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+alembic==1.12.0
+anyio==4.0.0
+appdirs==1.4.4
+asttokens==2.4.0
+async-timeout==4.0.3
+attrs==23.1.0
+azure-ai-formrecognizer==3.3.0
+azure-common==1.1.28
+azure-core==1.29.3
+backcall==0.2.0
+backoff==2.2.1
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
+bitsandbytes==0.41.1
+blinker==1.6.2
+boilerpy3==1.0.6
+bs4==0.0.1
+canals==0.7.0
+cattrs==23.1.2
+certifi==2023.7.22
+chardet==5.2.0
+charset-normalizer==3.2.0
+chroma-hnswlib==0.7.2
+chromadb==0.4.8
+click==8.1.7
+cloudpickle==2.2.1
+cmake==3.27.2
+coloredlogs==15.0.1
+comm==0.1.4
+contourpy==1.1.0
+cycler==0.11.0
+databricks-cli==0.17.7
+dataclasses-json==0.5.14
+datasets==2.14.4
+debugpy==1.6.7.post1
+decorator==5.1.1
+diffusers==0.20.2
+dill==0.3.7
+docker==6.1.3
+docopt==0.6.2
+einops==0.6.1
+elastic-transport==7.16.0
+elasticsearch==7.17.9
+emoji==2.8.0
+entrypoints==0.4
+Events==0.5
+exceptiongroup==1.1.3
+executing==1.2.0
+faiss-cpu==1.7.2
+farm-haystack==1.20.0
+fastapi==0.99.1
+filelock==3.12.3
+filetype==1.2.0
+Flask==2.3.3
+flatbuffers==23.5.26
+fonttools==4.42.1
+frozenlist==1.4.0
+fsspec==2023.9.0
+gitdb==4.0.10
+GitPython==3.1.34
+greenlet==2.0.2
+gunicorn==21.2.0
+h11==0.14.0
+httptools==0.6.0
+huggingface-hub==0.16.4
+humanfriendly==10.0
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.0.1
+inflect==7.0.0
+InstructorEmbedding==1.0.1
+ipykernel==6.25.2
+ipython==8.15.0
+ipywidgets==8.1.0
+isodate==0.6.1
+itsdangerous==2.1.2
+jarowinkler==1.2.3
+jedi==0.19.0
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+jupyterlab-widgets==3.0.8
+kiwisolver==1.4.5
+langchain==0.0.281
+langdetect==1.0.9
+langsmith==0.0.33
+lazy-imports==0.3.1
+lit==16.0.6
+lxml==4.9.3
+Mako==1.2.4
+Markdown==3.4.4
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mlflow==2.6.0
+monotonic==1.6
+more-itertools==10.1.0
+mpmath==1.3.0
+msrest==0.7.1
+multidict==6.0.4
+multiprocess==0.70.15
+mypy-extensions==1.0.0
+nest-asyncio==1.5.7
+networkx==3.1
+nltk==3.8.1
+num2words==0.5.12
+numexpr==2.8.5
+numpy==1.25.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+onnxruntime==1.15.1
+opencv-python==4.8.0.76
+overrides==7.4.0
+packaging==23.1
+pandas==2.1.0
+parso==0.8.3
+pdf2image==1.16.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==3.10.0
+posthog==3.0.2
+prompt-toolkit==3.0.39
+prompthub-py==4.0.0
+protobuf==4.24.2
+psutil==5.9.5
+psycopg2-binary==2.9.7
+ptyprocess==0.7.0
+pulsar-client==3.3.0
+pure-eval==0.2.2
+pyarrow==12.0.1
+pydantic==1.10.12
+Pygments==2.16.1
+PyJWT==2.8.0
+PyMuPDF==1.23.3
+PyMuPDFb==1.23.3
+pyparsing==3.0.9
+pypdf==3.15.5
+PyPika==0.48.9
+pytesseract==0.3.10
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-dotenv==1.0.0
+python-frontmatter==1.0.0
+python-magic==0.4.27
+pytz==2023.3
+PyYAML==6.0.1
+pyzmq==25.1.1
+quantulum3==0.9.0
+querystring-parser==1.2.4
+rank-bm25==0.2.2
+rapidfuzz==2.7.0
+referencing==0.30.2
+regex==2023.8.8
+requests==2.31.0
+requests-cache==0.9.8
+requests-oauthlib==1.3.1
+rouge==1.0.1
+rpds-py==0.10.2
+safetensors==0.3.3
+scikit-learn==1.3.0
+scipy==1.11.2
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+seqeval==1.2.2
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.5
+SQLAlchemy==1.4.49
+SQLAlchemy-Utils==0.41.1
+sqlparse==0.4.4
+sseclient-py==1.8.0
+stack-data==0.6.2
+starlette==0.27.0
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tika==2.6.0
+tiktoken==0.4.0
+tokenizers==0.13.3
+torch==2.0.1
+torchvision==0.15.2
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.9.0
+transformers==4.32.1
+triton==2.0.0
+typing-inspect==0.9.0
+typing_extensions==4.7.1
+tzdata==2023.3
+unstructured==0.10.12
+url-normalize==1.4.3
+urllib3==1.26.16
+uvicorn==0.23.2
+uvloop==0.17.0
+watchfiles==0.20.0
+wcwidth==0.2.6
+websocket-client==1.6.2
+websockets==11.0.3
+Werkzeug==2.3.7
+widgetsnbextension==4.0.8
+xxhash==3.3.0
+yarl==1.9.2
+zipp==3.16.2
