--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ chromadb
 farm-haystack[metrics,preprocessing,elasticsearch,inference,faiss,ocr,file-conversion,pdf]>=1.20.0
 pypdf
 opensearch-py
+optimum
+auto-gptq
 # accelerate==0.22.0
 # aiohttp==3.8.5
 # aiosignal==1.3.1
