mount .cache to streamlit app to avoid redownloading models, provide gpu to streamlit container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,14 @@ services:
       - 8501:8501
     volumes:
       - ./streamlit_app:/app/
+      - ~/.cache/:/root/.cache/
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
 volumes:
   chroma-data:
