--- a/streamlit_app/Dockerfile
+++ b/streamlit_app/Dockerfile
@@ -1,10 +1,11 @@
 
-FROM python:3.10-slim
+FROM python:3.10-bullseye
 
 RUN apt-get update && apt-get install -y \
     build-essential \
     software-properties-common \
     curl \
+    libmagic1 \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
