add ctransformers to jupyter requirements

--- a/jupyter/requirements.txt
+++ b/jupyter/requirements.txt
@@ -10,7 +10,6 @@ bs4
 ipywidgets
 chromadb
 # rouge
-farm-haystack[metrics,preprocessing,elasticsearch,inference,faiss,ocr,file-conversion,pdf]>=1.20.0
 pypdf
 opensearch-py
 optimum
@@ -21,6 +20,7 @@ accelerate
 safetensors
 pymilvus
 accelerate
+ctransformers
 
 # accelerate==0.23.0
 # aiohttp==3.8.5
