remove AppModel pipeline on __init__ to avoid error with GGUF models

--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -3,12 +3,11 @@ transformers[agents]
 sentence-transformers
 langchain
 ctransformers
+accelerate
 llama-cpp-python
 auto-gptq
 optimum
 chromadb-client
-# opentelemetry-api
-# opentelemetry-sdk
 opentelemetry-exporter-otlp
 unstructured[all-docs]
 python-magic
