--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,10 @@ services:
       start_period: 30s
   
   streamlit:
-    build: ./streamlit_app/
+    build: 
+      context: ./streamlit_app/
+      args:
+        - PROCESSOR=cpu
     environment:
       - CHROMADB_HOST=chroma
       - CHROMADB_PORT=8000
