--- a/streamlit_app/Dockerfile
+++ b/streamlit_app/Dockerfile
@@ -1,33 +1,37 @@
 FROM python:3.10-bookworm
 
+SHELL ["/bin/bash", "-c"]
+
+WORKDIR /app
+
+
+
 RUN apt-get update && apt-get install -y \
     build-essential \
     software-properties-common \
     curl \
     libmagic1 \
-    libgl1 && \
-    wget https://developer.download.nvidia.com/compute/cuda/12.3.1/local_installers/cuda-repo-debian12-12-3-local_12.3.1-545.23.08-1_amd64.deb && \
-    dpkg -i cuda-repo-debian12-12-3-local_12.3.1-545.23.08-1_amd64.deb && \
-    cp /var/cuda-repo-debian12-12-3-local/cuda-*-keyring.gpg /usr/share/keyrings/ && \
-    add-apt-repository contrib && \
-    apt-get update && \
-    apt-get -y install cuda-toolkit-12-3 && \
-    rm -rf /var/lib/apt/lists/*
+    libgl1
 
-WORKDIR /app
+ARG PROCESSOR=cpu
+# ARG PROCESSOR=gpu
 
 COPY requirements.txt .
+RUN --mount=type=cache,target=/root/.cache/pip pip install -r requirements.txt 
 
-RUN pip install -r requirements.txt
-
-#Install llama-cpp-python with CUDA Support
-RUN CUDACXX=/usr/local/cuda-12/bin/nvcc CMAKE_ARGS="-DLLAMA_CUBLAS=on -DCMAKE_CUDA_ARCHITECTURES=all-major" FORCE_CMAKE=1 \
-    pip install llama-cpp-python --no-cache-dir --force-reinstall --upgrade
+### dependency-setup.sh looks at the PROCESSOR arg. If it is set to gpu, it installs CUDA Toolkit and llama-cpp-python with CUDA Support
+### set PROCESSOR=gpu to build with CUDA support
+COPY dependency-setup.sh .
+COPY requirements-cuda.txt .
+RUN --mount=type=cache,target=/root/.cache/pip ./dependency-setup.sh
 
 COPY . .
 
 EXPOSE 8501
 
 HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
+
+# Set PROCESSOR env var to use in application
+ENV PROCESSOR=${PROCESSOR}
 
 ENTRYPOINT ["streamlit", "run", "src/Home.py", "--server.port=8501", "--server.address=0.0.0.0"]
