--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,14 @@ services:
     volumes:
       - ./api/src/:/app/src/
       - ./.env:/workspace/.env
-      - ~/.cache/:/root/.cache/
+      - ~/.cache/:/home/fastapi/.cache/
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
   
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0 #7.17.16
