--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -20,7 +20,7 @@ COPY requirements.txt .
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip install -r requirements.txt && pip cache purge
 
-ARG PROCESSOR=gpu
+ARG PROCESSOR=cpu
 ENV PROCESSOR=${PROCESSOR}
 COPY ./dependency-setup.sh .
 RUN ./dependency-setup.sh
