remove unnecessary dependencies, split up gpu and cpu docker-compose files; optimize builds and use nvidia base image to reduce size; remove gpu from streamlit container

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -18,7 +18,7 @@ RUN useradd --create-home --shell /bin/bash fastapi && chown -R fastapi /app && 
 
 COPY requirements.txt .
 RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install -r requirements.txt && pip cache purge
+    pip install -r requirements.txt
 
 ARG PROCESSOR=cpu
 ENV PROCESSOR=${PROCESSOR}
