--- a/docker-compose-gpu.yml
+++ b/docker-compose-gpu.yml
@@ -2,11 +2,11 @@ version: '3.9'
 
 services:
   jupyter:
-    image: generative-ai-jupyter-cpu
+    image: generative-ai-jupyter-gpu
     build: 
       context: ./jupyter
       args:
-        - PROCESSOR=cpu
+        - PROCESSOR=gpu
     ports: 
       - 8888:8888
     volumes:
@@ -14,6 +14,14 @@ services:
       - ./jupyter/notebooks/:/workspace/notebooks/
       - ./.env:/workspace/.env
       - ~/.cache/:/root/.cache/
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+  
   chroma:
     image: chromadb/chroma
     command: uvicorn chromadb.app:app --reload --workers 1 --host 0.0.0.0 --port 8000 --log-config chromadb/log_config.yml
@@ -51,12 +59,13 @@ services:
     volumes:
       - ./streamlit_app/:/app/
       - ~/.cache/:/root/.cache/
+  
   inference-api:
-    image: generative-ai-inference-api-cpu
+    image: generative-ai-inference-api-gpu
     build: 
       context: ./api
       args:
-        - PROCESSOR=cpu
+        - PROCESSOR=gpu
     ports: 
       - 5000:5000
     environment:
@@ -75,6 +84,13 @@ services:
       - ./api/src/:/app/src/
       - ./.env:/workspace/.env
       - ~/.cache/:/home/fastapi/.cache/
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
   
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0 #7.17.16
