--- a/jupyter/requirements.txt
+++ b/jupyter/requirements.txt
@@ -10,7 +10,7 @@ huggingface_hub
 bs4
 ipywidgets
 chromadb
-# rouge
+rouge
 pypdf
 opensearch-py
 optimum
@@ -22,4 +22,4 @@ safetensors
 pymilvus
 accelerate
 elasticsearch
-# llama-cpp-python
+llama-cpp-python
