--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
     volumes:
       - ./api/src/:/app/src/
       - ./.env:/workspace/.env
-      - ~/.cache/:/home/fastapi/.cache/
+      - ~/.cache/:/root/.cache/
 
   opensearch: # This is also the hostname of the container within the Docker network (i.e. https://opensearch-node1/)
     image: opensearchproject/opensearch:latest # Specifying the latest available image - modify if you want a specific version
