use Mistral-7b-0.3 gguf

--- a/docker-compose-gpu.yml
+++ b/docker-compose-gpu.yml
@@ -76,13 +76,11 @@ services:
     ports: 
       - 5000:5000
     environment:
-      - MODEL_NAME=lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF
-      - MODEL_FILE=Meta-Llama-3-8B-Instruct-Q4_K_M.gguf
-      # - MODEL_NAME=TheBloke/Mistral-7B-Instruct-v0.2-GGUF
-      # - MODEL_FILE=mistral-7b-instruct-v0.2.Q4_K_M.gguf
-      # - TOKENIZER_MODEL_NAME=TheBloke/Mistral-7B-Instruct-v0.2-GPTQ
+      - MODEL_NAME=lmstudio-community/Mistral-7B-Instruct-v0.3-GGUF
+      - MODEL_FILE=Mistral-7B-Instruct-v0.3-Q4_K_M.gguf
+      # - MODEL_NAME=lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF
+      # - MODEL_FILE=Meta-Llama-3-8B-Instruct-Q4_K_M.gguf
       # - MODEL_NAME=TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF
-      # - MODEL_FILE=mixtral-8x7b-instruct-v0.1.Q8_0.gguf
       # - MODEL_FILE=mixtral-8x7b-instruct-v0.1.Q4_K_M.gguf
       # - TOKENIZER_MODEL_NAME=TheBloke/Mixtral-8x7B-Instruct-v0.1-GPTQ
       - MODEL_TYPE=GGUF
