--- a/docker-compose-gpu.yml
+++ b/docker-compose-gpu.yml
@@ -76,8 +76,10 @@ services:
     ports: 
       - 5000:5000
     environment:
-      - MODEL_NAME=lmstudio-community/Mistral-7B-Instruct-v0.3-GGUF
-      - MODEL_FILE=Mistral-7B-Instruct-v0.3-Q4_K_M.gguf
+      - MODEL_NAME=bartowski/aya-23-8B-GGUF
+      - MODEL_FILE=aya-23-8B-Q4_K_M.gguf
+      # - MODEL_NAME=lmstudio-community/Mistral-7B-Instruct-v0.3-GGUF
+      # - MODEL_FILE=Mistral-7B-Instruct-v0.3-Q4_K_M.gguf
       # - MODEL_NAME=lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF
       # - MODEL_FILE=Meta-Llama-3-8B-Instruct-Q4_K_M.gguf
       # - MODEL_NAME=TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF
