--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,13 +68,18 @@ services:
     ports: 
       - 5000:5000
     environment:
-      - MODEL_NAME=lmstudio-community/Mistral-7B-Instruct-v0.3-GGUF
-      - MODEL_FILE=Mistral-7B-Instruct-v0.3-Q4_K_M.gguf
+      - MODEL_NAME=bartowski/aya-23-8B-GGUF
+      - MODEL_FILE=aya-23-8B-Q4_K_M.gguf
+      # - MODEL_NAME=lmstudio-community/Mistral-7B-Instruct-v0.3-GGUF
+      # - MODEL_FILE=Mistral-7B-Instruct-v0.3-Q4_K_M.gguf
       # - MODEL_NAME=lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF
       # - MODEL_FILE=Meta-Llama-3-8B-Instruct-Q4_K_M.gguf
+      # - MODEL_NAME=TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF
+      # - MODEL_FILE=mixtral-8x7b-instruct-v0.1.Q4_K_M.gguf
+      # - TOKENIZER_MODEL_NAME=TheBloke/Mixtral-8x7B-Instruct-v0.1-GPTQ
       - MODEL_TYPE=GGUF
       - N_GPU_LAYERS=0
-      - CONTEXT_LENGTH=8192
+      - CONTEXT_LENGTH=32000
       - LLAMA_CPP_THREADS=4
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/api/health']
