update llama-cpp-python install arguments; add llama 3.1 and mistral nemo options in docker compose files

--- a/docker-compose-gpu.yml
+++ b/docker-compose-gpu.yml
@@ -80,8 +80,10 @@ services:
       # - MODEL_FILE=aya-23-8B-Q4_K_M.gguf
       # - MODEL_NAME=lmstudio-community/Mistral-7B-Instruct-v0.3-GGUF
       # - MODEL_FILE=Mistral-7B-Instruct-v0.3-Q4_K_M.gguf
-      - MODEL_NAME=lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF
-      - MODEL_FILE=Meta-Llama-3-8B-Instruct-Q4_K_M.gguf
+      - MODEL_NAME=lmstudio-community/Meta-Llama-3.1-8B-Instruct-GGUF
+      - MODEL_FILE=Meta-Llama-3.1-8B-Instruct-Q4_K_M.gguf
+      # - MODEL_NAME=QuantFactory/Mistral-Nemo-Instruct-2407-GGUF
+      # - MODEL_FILE=Mistral-Nemo-Instruct-2407.Q4_K_M.gguf
       # - MODEL_NAME=TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF
       # - MODEL_FILE=mixtral-8x7b-instruct-v0.1.Q4_K_M.gguf
       # - TOKENIZER_MODEL_NAME=TheBloke/Mixtral-8x7B-Instruct-v0.1-GPTQ
